optimize cache path

--- a/pyhp.conf
+++ b/pyhp.conf
@@ -8,6 +8,6 @@ closing_tag = [\n \t]\?\>	# regex
 [caching]
 allow_caching = True
 auto_caching = False		# ignore -c arg
-cache_path = /var/cache/pyhp	# path to use
+cache_path = ~/.pyhpcache	# path to use
 handler = files_mtime		
 handler_path = /lib/pyhp/cache_handlers	# directory containing the handler
