--- a/pyhp.conf
+++ b/pyhp.conf
@@ -6,8 +6,47 @@ opening_tag = \<\?pyhp[\n \t]	# regex
 closing_tag = [\n \t]\?\>	# regex
 
 [caching]
-allow_caching = True
-auto_caching = False		# ignore -c arg
-cache_path = ~/.pyhpcache	# path to use
+enable = True
+
+# ignore -c arg
+auto_caching = False
+
+# path for caching
+cache_path = ~/.pyhp/cache
+
+#handler + directory containing the handler
 handler = files_mtime		
-handler_path = /lib/pyhp/cache_handlers	# directory containing the handler
+handler_path = /lib/pyhp/cache_handlers
+
+[sessions]
+enable = True
+auto_start = False
+
+# path argument for handler
+path = ~/.pyhp/sessions.db
+
+# session handler + directory containing the session handler
+handler = sqlite
+handler_path = /lib/pyhp/session_handlers
+
+# lenght of the session id
+sid_length = 32
+
+# how to serialize/unserialize session data, pickle or json
+serialize_handler = pickle
+
+# config for session cookie
+name = PyHPSESSID
+cookie_lifetime = 0
+cookie_path = /
+cookie_domain =
+cookie_secure = True
+cookie_httponly = False
+cookie_samesite = 
+
+# probability/divisor = probability for carrying out a garbage collection at startup
+gc_probability = 1
+gc_divisor = 100
+
+# write only if data has changed
+lazy_write = True
