--- a/pyhp.conf
+++ b/pyhp.conf
@@ -23,7 +23,7 @@ enable = True
 auto_start = False
 
 # path argument for handler
-path = ~/.pyhp/sessions.db
+path = ~/.pyhp/sessions
 
 # session handler + directory containing the session handler
 handler = sqlite
