--- a/pyhp.conf
+++ b/pyhp.conf
@@ -26,7 +26,7 @@ auto_start = False
 path = ~/.pyhp/sessions
 
 # session handler + directory containing the session handler
-handler = sqlite
+handler = files
 handler_path = /lib/pyhp/session_handlers
 
 # lenght of the session id
