--- a/pyhp.conf
+++ b/pyhp.conf
@@ -48,5 +48,8 @@ cookie_samesite =
 gc_probability = 1
 gc_divisor = 100
 
+# max lifetime of session since last use
+gc_maxlifetime = 1440
+
 # write only if data has changed
 lazy_write = True
