--- a/pyhp.conf
+++ b/pyhp.conf
@@ -8,6 +8,13 @@ closing_tag = [\n \t]\?\>	# regex
 [caching]
 enable = True
 
+# maximum size in MByte, -1 = infinite
+max_size = 16
+
+# time in seconds after a cached file is renewed,
+# -1 to only renew if cached file is older than the original
+ttl = -1
+
 # ignore -c arg
 auto_caching = False
 
