--- a/pyhp.conf
+++ b/pyhp.conf
@@ -12,7 +12,7 @@ enable = True
 max_size = 16
 
 # time in seconds after a cached file is renewed,
-# -1 to only renew if cached file is older than the original
+# -1 to only renew if is_outdated returns True
 ttl = -1
 
 # ignore -c arg
