add request section

--- a/pyhp.conf
+++ b/pyhp.conf
@@ -5,6 +5,19 @@
 opening_tag = \<\?pyhp[\n \t]	# regex
 closing_tag = [\n \t]\?\>	# regex
 
+[request]
+# order to fill up REQUEST, missing methods are not filled in
+request_order = GET, POST, COOKIE
+
+# Comment if not wanted
+fallback_value = 
+
+# dont consume stdin and dont fill in POST
+enable_post_data_reading = False
+
+# fallback content-type header
+default_mimetype = text/html
+
 [caching]
 enable = True
 
