--- a/pyhp.conf
+++ b/pyhp.conf
@@ -9,6 +9,8 @@ closing_tag = [\n \t]\?\>	# regex
 # order to fill up REQUEST, missing methods are not filled in
 request_order = GET, POST, COOKIE
 
+keep_blank_values = True
+
 # Comment if not wanted
 fallback_value = 
 
