--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ python:
   - "3.6"
   - "3.7"
 script:
+  - mv pyhp.conf /etc/pyhp.conf
+  - mkdir /lib/pyhp/cache_handlers
+  - mv cache_handlers/* /lib/pyhp/cache_handlers
   - /usr/bin/python3 pyhp.py examples/Test1.pyhp
   - /usr/bin/python3 pyhp.py examples/Test2.pyhp
   - /usr/bin/python3 pyhp.py examples/Test3.pyhp
