add more customizable Request handling

--- a/pyhp.conf
+++ b/pyhp.conf
@@ -6,12 +6,13 @@ opening_tag = \<\?pyhp[\n \t]	# regex
 closing_tag = [\n \t]\?\>	# regex
 
 [request]
-# order to fill up REQUEST, missing methods are not filled in
-request_order = GET, POST, COOKIE
+# order to fill up REQUEST, starting left and missing methods are not filled in
+# only seperate methods by one Withespace
+request_order = GET POST COOKIE
 
 keep_blank_values = True
 
-# Comment if not wanted
+# comment out if not wanted
 fallback_value = 
 
 # dont consume stdin and dont fill in POST
