fix warning caused by invalid escape sequences

--- a/pyhp.conf
+++ b/pyhp.conf
@@ -2,8 +2,8 @@
 # This file uses the INI syntax
 
 [parser]
-opening_tag = \<\?pyhp[\n \t]	# regex
-closing_tag = [\n \t]\?\>	# regex
+opening_tag = \\<\\?pyhp[\n \t]	# regex
+closing_tag = [\n \t]\\?\\>	# regex
 
 [request]
 # order to fill up REQUEST, starting left and missing methods are not filled in
