--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ python:
   - "3.7"
   - "3.8-dev"
   - "pypy3"
+env:
+  - QUERY_STRING="Test0=Hello&Test1==World!" HTTP_COOKIE="Test0=Hello; Test1 == World!; Test2=Hello=World%21; Test3=; Test4"
 sudo: required
 install:
   - sudo mv pyhp.conf /etc/pyhp.conf
