add main module, change a few names in the caching section of pyhp.conf

--- a/pyhp.conf
+++ b/pyhp.conf
@@ -3,6 +3,7 @@
 
 [parser]
 # regex to isolate the code
+# escape sequences are processed
 regex = \\<\\?pyhp[\\s](.*?)[\\s]\\?\\>
 
 [request]
@@ -32,14 +33,13 @@ max_size = 16
 ttl = -1
 
 # ignore -c arg
-auto_caching = False
+auto = False
 
 # path for caching
-cache_path = ~/.pyhp/cache
+path = ~/.pyhp/cache
 
-# handler + directory containing the handler
-handler = files_mtime		
-handler_path = /lib/pyhp/cache_handlers
+# path to handler	
+handler_path = /lib/pyhp/cache_handlers/files-mtime.py
 
 [sessions]
 enable = True
