change cache path to common .cache directory

--- a/pyhp.conf
+++ b/pyhp.conf
@@ -36,7 +36,7 @@ ttl = -1
 auto = False
 
 # path for caching
-path = ~/.pyhp/cache
+path = ~/.cache/pyhp
 
 # path to handler	
 handler_path = /lib/pyhp/cache_handlers/files_mtime.py
