--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,10 @@ env:
   - QUERY_STRING="Test0=Hello&Test1==World!&Test2=&Test4" HTTP_COOKIE="Test0=Hello; Test1 == World!; Test2=Hello=World%21; Test3=; Test4"
 sudo: required
 install:
-  - wget -qO - https://bootstrap.pypa.io/get-pip.py|python3
   - python3 setup.py bdist_wheel
   - version=$(python3 setup.py --version)
   - cd debian
-  - sudo ./build_deb.sh pyhp-test ../dist/pyhp_core-$version-py3-none-any.whl "python3 -m pip"
+  - . ./build_deb.sh pyhp-test ../dist/pyhp_core-$version-py3-none-any.whl pip
   - sudo dpkg -i pyhp-test.deb
   - cd ../examples
 script:
