--- a/pyhp.conf
+++ b/pyhp.conf
@@ -1,4 +1,4 @@
-# Configuration for the PyHP Interpreter (https://github.com/Deric-W/PyHP-Interpreter)
+# Configuration for the PyHP Interpreter (https://github.com/Deric-W/PyHP)
 # This file uses the INI syntax
 
 [parser]
