changed cache handler interface, add example session handler

--- a/pyhp.conf
+++ b/pyhp.conf
@@ -49,8 +49,7 @@ auto_start = False
 path = ~/.pyhp/sessions
 
 # session handler + directory containing the session handler
-handler = files
-handler_path = /lib/pyhp/session_handlers
+handler_path = /lib/pyhp/session_handlers/files_lock.py
 
 # lenght of the session id
 sid_length = 32
