--- a/.travis.yml
+++ b/.travis.yml
@@ -21,11 +21,18 @@ script:
   - pyhp embedding/shebang.pyhp|diff embedding/shebang.output -
   - pyhp embedding/indentation.pyhp|diff embedding/indentation.output -
   - echo "<?pyhp print('stdin test') ?>" | pyhp | diff embedding/stdin.output -
+  - pyhp /dev/null|diff embedding/devnull.output -
   - test -f /usr/lib/pyhp/cache_handlers/files_mtime.py
   - test ! -f ~/.cache/pyhp/$(pwd)/embedding/syntax.pyhp.marshal$(python3 -c "import marshal; print(marshal.version, end='')")
   - pyhp --caching embedding/syntax.pyhp|diff embedding/syntax.output -
   - test -f ~/.cache/pyhp/$(pwd)/embedding/syntax.pyhp.marshal$(python3 -c "import marshal; print(marshal.version, end='')")
+  - pyhp --caching caching/clear_self.pyhp
+  - test ! -f ~/.cache/pyhp/$(pwd)/caching/clear_self.pyhp.marshal$(python3 -c "import marshal; print(marshal.version, end='')")
+  - pyhp --caching caching/is_cached.pyhp
   - pyhp --caching embedding/syntax.pyhp|diff embedding/syntax.output -
+  - pyhp --caching caching/clear_all.pyhp
+  - test ! -f ~/.cache/pyhp/$(pwd)/caching/clear_all.pyhp.marshal$(python3 -c "import marshal; print(marshal.version, end='')")
+  - test ! -f ~/.cache/pyhp/$(pwd)/embedding/syntax.pyhp.marshal$(python3 -c "import marshal; print(marshal.version, end='')")
   - pyhp request/methods.pyhp|diff request/methods.output -
   - pyhp request/request-order.pyhp --config request/request-order.conf|diff request/request-order.output -
   - pyhp header/header.pyhp|diff header/header.output -
