rework caching, add caching functions

--- a/pyhp.conf
+++ b/pyhp.conf
@@ -6,6 +6,9 @@
 # escape sequences are processed
 regex = \\<\\?pyhp[\\s](.*?)[\\s]\\?\\>
 
+# if python code should be stripped of a starting indentation
+dedent = True
+
 [request]
 # order to fill up REQUEST, starting left and missing methods are not filled in
 # only seperate methods by one Withespace
@@ -23,55 +26,59 @@ enable_post_data_reading = False
 default_mimetype = text/html
 
 [caching]
+# allow caching
 enable = True
+
+# ignore -c arg and always use cache
+auto = False
+
+# path to handler	
+handler_path = /usr/lib/pyhp/cache_handlers/files_mtime.py
+
+# ignore caching errors
+ignore_errors = False
+
+# path for caching
+location = ~/.cache/pyhp
 
 # maximum size in MByte, -1 = infinite
 max_size = 16
 
 # time in seconds after a cached file is renewed,
-# -1 to only renew if file is older than the original
+# -1 to only renew if the cache handler detects thats it is outdated
 ttl = -1
 
-# ignore -c arg
+[sessions]
+# allow sessions
+enable = True
+
+# always start session
 auto = False
 
-# path for caching
-path = ~/.cache/pyhp
+# location of session storage
+location = ~/.pyhp/sessions
 
-# path to handler	
-handler_path = /usr/lib/pyhp/cache_handlers/files_mtime.py
+# path to session handler
+handler_path = /usr/lib/pyhp/session_handlers/files.py
 
-[sessions]
-enable = True
-auto_start = False
-
-# path argument for handler
-path = ~/.pyhp/sessions
-
-# session handler + directory containing the session handler
-handler_path = /usr/lib/pyhp/session_handlers/files_lock.py
-
-# lenght of the session id
+# lenght of the session id in characters
 sid_length = 32
 
 # how to serialize/unserialize session data, pickle or json
-serialize_handler = pickle
+serialize_handler = json
 
 # config for session cookie
 name = PyHPSESSID
-cookie_lifetime = 0
-cookie_path = /
-cookie_domain =
-cookie_secure = True
-cookie_httponly = False
-cookie_samesite = 
+cookie_lifetime = 0         # delete cookie if browser is closed
+cookie_path = /             # allow all sites
+cookie_domain =             # allow current domain
+cookie_secure = True        # prevent unencrypted session id
+cookie_httponly = True      # protect against CSS attacks
+cookie_samesite =           # default = Lax
 
-# probability/divisor = probability for carrying out a garbage collection at startup
+# probability/divisor = probability for carrying out a garbage collection when opening a session
 gc_probability = 1
 gc_divisor = 100
 
 # max lifetime of session since last use
 gc_maxlifetime = 1440
-
-# write only if data has changed
-lazy_write = True
