allow multi-level caches, relax pyhp syntax, remove stdin support

--- a/pyhp.conf
+++ b/pyhp.conf
@@ -1,10 +1,14 @@
-# Configuration for the PyHP Interpreter (https://github.com/Deric-W/PyHP)
+# Configuration for PyHP (https://github.com/Deric-W/PyHP)
 # This file uses the INI syntax
 
 [parser]
-# regex to isolate the code
-# escape sequences are processed
-regex = \\<\\?pyhp[\\s](.*?)[\\s]\\?\\>
+# regex matching the starting tag of a code section
+# escape sequences are processed (at the cost of missing unicode support)
+start = <\\?pyhp\\s
+
+# regex matching the ending tag of a code section
+# escape sequences are processed (at the cost of missing unicode support)
+end = \\s\\?>
 
 # if python code should be stripped of a starting indentation
 dedent = True
@@ -29,24 +33,26 @@ default_mimetype = text/html
 # allow caching
 enable = True
 
-# ignore -c arg and always use cache
+# ignore -c arg an dalways cache
 auto = False
-
-# path to handler	
-handler_path = /usr/lib/pyhp/cache_handlers/files_mtime.py
 
 # ignore caching errors
 ignore_errors = False
 
-# path for caching
-location = ~/.cache/pyhp
+# whitespace seperated list of paths to handlers in order of useage	
+handler_paths = /usr/lib/pyhp/cache_handlers/files_mtime.py
 
-# maximum size in MByte, -1 = infinite
-max_size = 16
+# whitespace seperated list of cache locations
+locations = ~/.cache/pyhp
 
-# time in seconds after a cached file is renewed,
-# -1 to only renew if the cache handler detects thats it is outdated
-ttl = -1
+# whitespace seperated list of maximum sizes in MByte, -1 = infinite
+# if this size is exceeded no NEW files will be added to the cache,
+# already cached ones will still be updated
+max_sizes = 16
+
+# whitespace seperated list of times in seconds after a cached file is renewed,
+# ttl < 0 to only renew if the cache handler detects that the cache is outdated
+ttls = -1
 
 [sessions]
 # allow sessions
@@ -73,12 +79,12 @@ cookie_lifetime = 0         # delete cookie if browser is closed
 cookie_path = /             # allow all sites
 cookie_domain =             # allow current domain
 cookie_secure = True        # prevent unencrypted session id
-cookie_httponly = True      # protect against CSS attacks
+cookie_httponly = True      # protect against XSS attacks
 cookie_samesite =           # default = Lax
 
 # probability/divisor = probability for carrying out a garbage collection when opening a session
 gc_probability = 1
 gc_divisor = 100
 
-# max lifetime of session since last use
+# max lifetime of session since last use in seconds
 gc_maxlifetime = 1440
