tweak tests, minor improvements

--- a/pyhp.conf
+++ b/pyhp.conf
@@ -15,7 +15,7 @@ dedent = True
 
 [request]
 # order to fill up REQUEST, starting left and missing methods are not filled in
-# only seperate methods by one Withespace
+# only seperate methods by withespace
 request_order = GET POST COOKIE
 
 keep_blank_values = True
@@ -39,7 +39,7 @@ auto = False
 # ignore caching errors
 ignore_errors = False
 
-# whitespace seperated list of paths to handlers in order of useage	
+# whitespace seperated list of paths to handlers in order of usage	
 handler_paths = /usr/lib/pyhp/cache_handlers/files_mtime.py
 
 # whitespace seperated list of cache locations
