add 2 tests, optimization_level cache parameter

--- a/pyhp.conf
+++ b/pyhp.conf
@@ -54,6 +54,10 @@ max_sizes = 16
 # ttl < 0 to only renew if the cache handler detects that the cache is outdated
 ttls = -1
 
+# optimization level to be used when compiling files for the cache
+# all levels: https://docs.python.org/3/library/functions.html#compile
+optimization_level = -1
+
 [sessions]
 # allow sessions
 enable = True
