--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ script:
   - pyhp embedding/syntax.pyhp|diff embedding/syntax.output -
   - pyhp embedding/shebang.pyhp|diff embedding/shebang.output -
   - pyhp embedding/indentation.pyhp|diff embedding/indentation.output -
+  - pyhp embedding/file.pyhp
   - echo "<html><?pyhp print('reading from stdin is also possible') ?></html>" | pyhp | diff embedding/stdin.output -
   - pyhp /dev/null|diff embedding/devnull.output -
   - test -f /usr/lib/pyhp/cache_handlers/files_mtime.py
@@ -28,6 +29,7 @@ script:
   - test -f ~/.cache/pyhp/$(pwd)/embedding/syntax.pyhp.marshal$(python3 -c "import marshal; print(marshal.version, end='')")
   - pyhp --caching caching/clear_self.pyhp
   - pyhp --caching caching/is_cached.pyhp
+  - pyhp caching/cache.pyhp
   - pyhp --caching embedding/syntax.pyhp|diff embedding/syntax.output -
   - pyhp --caching caching/clear_all.pyhp
   - test ! -f ~/.cache/pyhp/$(pwd)/embedding/syntax.pyhp.marshal$(python3 -c "import marshal; print(marshal.version, end='')")
