--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ script:
   - test -f ~/.cache/pyhp/$(pwd)/embedding/syntax.pyhp.marshal$(python3 -c "import marshal; print(marshal.version, end='')")
   - pyhp --caching caching/clear_self.pyhp
   - pyhp --caching caching/is_cached.pyhp
-  - pyhp caching/cache.pyhp
+  - pyhp --caching caching/cache.pyhp
   - pyhp --caching embedding/syntax.pyhp|diff embedding/syntax.output -
   - pyhp --caching caching/clear_all.pyhp
   - test ! -f ~/.cache/pyhp/$(pwd)/embedding/syntax.pyhp.marshal$(python3 -c "import marshal; print(marshal.version, end='')")
