fix cache enable typo, add compile_file, renamed FileLoader

--- a/pyhp.conf
+++ b/pyhp.conf
@@ -13,6 +13,10 @@ end = \\s\\?>
 # if python code should be stripped of a starting indentation
 dedent = True
 
+# optimization level to be used when compiling files
+# all levels: https://docs.python.org/3/library/functions.html#compile
+optimization_level = -1
+
 [request]
 # order to fill up REQUEST, starting left and missing methods are not filled in
 # only seperate methods by withespace
@@ -53,10 +57,6 @@ max_sizes = 16
 # whitespace seperated list of times in seconds after a cached file is renewed,
 # ttl < 0 to only renew if the cache handler detects that the cache is outdated
 ttls = -1
-
-# optimization level to be used when compiling files for the cache
-# all levels: https://docs.python.org/3/library/functions.html#compile
-optimization_level = -1
 
 [sessions]
 # allow sessions
