--- a/setup.cfg
+++ b/setup.cfg
@@ -18,3 +18,13 @@ classifiers =
 [options]
 packages = pyhp
 python_requires = >=3.5
+
+[coverage:run]
+omit = tests/*
+
+[mypy]
+disallow_redefinition = True
+warn-unreachable = True
+warn-redundant-casts = True
+warn_unused_configs = True
+disallow-subclassing-any = True
