--- a/.github/workflows/code_checks.yaml
+++ b/.github/workflows/code_checks.yaml
@@ -10,7 +10,7 @@ jobs:
   Test:
     strategy:
       matrix:
-        python-version: ["3.5", "3.6", "3.7","3.8", "3.9", "3.10", "pypy3"]
+        python-version: ["3.5", "3.6", "3.7","3.8", "3.9", "3.10.0-alpha.4", "pypy3"]
         os: [ubuntu-latest, windows-latest]
 
     runs-on: ${{ matrix.os }}
@@ -56,7 +56,7 @@ jobs:
 #    runs-on: ubuntu-latest
 #    strategy:
 #      matrix:
-#        python-version: ["3.5", "3.6", "3.7", "3.8", "3.9", "3.10", "pypy3"]
+#        python-version: ["3.5", "3.6", "3.7", "3.8", "3.9", "3.10.0-alpha.4", "pypy3"]
 #
 #    steps:
 #    # setup
