port tests to unittest This commit ports all tests to the unittest framework as mentioned in issue #21. They will be expanded when the subsystems get refactored.

--- a/.github/workflows/Tests.yaml
+++ b/.github/workflows/Tests.yaml
@@ -44,7 +44,7 @@ jobs:
       shell: bash
 
     - name: run tests
-      run: coverage run -m unittest discover
+      run: coverage run -m unittest discover --verbose
 
     - name: Upload coverage
       uses: codecov/codecov-action@v1
