change license to GPLv3

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = pyhp-core
 version = attr: pyhp.__version__
 description = package for embedding and using python code like php
-license = MIT
+license = GPLv3
 license_file = LICENSE
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -13,7 +13,7 @@ maintainer_email = robo-eric@gmx.de
 url = https://github.com/Deric-W/PyHP
 classifiers =
     Programming Language :: Python :: 3
-    License :: OSI Approved :: MIT License
+    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
 
 [options]
 packages = pyhp
