update setup.cfg classifiers

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,15 @@ maintainer_email = robo-eric@gmx.de
 url = https://github.com/Deric-W/PyHP
 classifiers =
     Programming Language :: Python :: 3
+	Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Intended Audience :: Developers
+    Operating System :: Microsoft :: Windows
+    Operating System :: POSIX
+    Topic :: Internet :: WWW/HTTP
+    Topic :: Internet :: WWW/HTTP :: Dynamic Content
+    Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
 
 [options]
