Improve typing of compiler subpackage
This commit replaces a few type hints in the compiler subpackage with generics.
This allows detaching a CodeBuilderDecorator which was detached from another CodeBuilderDecorator
and fixes the result of CodeBuilder.copy() not having the same type as his 'parent'.

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,7 +34,7 @@ omit = tests/*
 
 [mypy]
 disallow_redefinition = True
-warn-unreachable = True
-warn-redundant-casts = True
+warn_unreachable = True
+warn_redundant_casts = True
 warn_unused_configs = True
-disallow-subclassing-any = True
+disallow_subclassing_any = True
