replace pyhp.embed with pyhp.compiler (Issue #25)

--- a/pyhp.conf
+++ b/pyhp.conf
@@ -2,9 +2,18 @@
 # This file uses the INI syntax
 
 [parser]
-# regex to isolate the code
-# escape sequences are processed
-regex = \\<\\?pyhp[\\s](.*?)[\\s]\\?\\>
+# regex matching the start and end of a code section
+# escape sequences are processed (at the cost of missing unicode support)
+start = <\\?pyhp\\s
+end = \\s\\?>
+
+# if python code should be stripped of a starting indentation
+dedent = True
+
+[compiler]
+# optimization level to be used with the builtin compile()
+# all levels: https://docs.python.org/3/library/functions.html#compile
+optimization_level = -1
 
 [request]
 # order to fill up REQUEST, starting left and missing methods are not filled in
@@ -40,39 +49,3 @@ path = ~/.cache/pyhp
 
 # path to handler	
 handler_path = /lib/pyhp/cache_handlers/files_mtime.py
-
-[sessions]
-enable = True
-auto_start = False
-
-# path argument for handler
-path = ~/.pyhp/sessions
-
-# session handler + directory containing the session handler
-handler = files
-handler_path = /lib/pyhp/session_handlers
-
-# lenght of the session id
-sid_length = 32
-
-# how to serialize/unserialize session data, pickle or json
-serialize_handler = pickle
-
-# config for session cookie
-name = PyHPSESSID
-cookie_lifetime = 0
-cookie_path = /
-cookie_domain =
-cookie_secure = True
-cookie_httponly = False
-cookie_samesite = 
-
-# probability/divisor = probability for carrying out a garbage collection at startup
-gc_probability = 1
-gc_divisor = 100
-
-# max lifetime of session since last use
-gc_maxlifetime = 1440
-
-# write only if data has changed
-lazy_write = True
