--- a/setup.cfg
+++ b/setup.cfg
@@ -25,7 +25,7 @@ classifiers =
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
 
 [options]
-packages = pyhp
+packages = pyhp, pyhp.compiler
 python_requires = >=3.8
 
 [coverage:run]
@@ -37,4 +37,13 @@ disallow_redefinition = True
 warn_unreachable = True
 warn_redundant_casts = True
 warn_unused_configs = True
+warn_unused_ignores = True
 disallow_subclassing_any = True
+disallow_any_generics = True
+ignore_missing_imports = True
+no_implicit_reexport = True
+check_untyped_defs = True
+disallow_untyped_defs = True
+
+[mypy-pyhp.libpyhp]
+ignore_errors = True
