add type checking to Github workflow

--- a/.github/workflows/Tests.yaml
+++ b/.github/workflows/Tests.yaml
@@ -33,7 +33,10 @@ jobs:
         key: ${{ runner.os }}-pip-${{ hashFiles('setup.cfg') }}
 
     - name: Install test dependencies
-      run: python -m pip --cache-dir ~/.cache/pip install --quiet wheel setuptools coverage
+      run: python -m pip --cache-dir ~/.cache/pip install --quiet mypy wheel setuptools coverage
+
+    - name: run MyPy
+      run: python -m mypy --config-file setup.cfg -p pyhp
 
     # test
     - name: Build wheel
@@ -50,34 +53,3 @@ jobs:
       uses: codecov/codecov-action@v1
       with:
         flags: ${{ runner.os }}
-
-
-#  Typecheck:  # disabled until we have type hints
-#    runs-on: ubuntu-latest
-#    strategy:
-#      matrix:
-#        python-version: ["3.8", "3.9", "3.10.0-alpha.4"]
-#
-#    steps:
-#    # setup
-#    - name: Checkout Repository
-#      uses: actions/checkout@v2
-#    
-#    - name: Set up Python ${{ matrix.python-version }}
-#      uses: actions/setup-python@v2
-#      with:
-#        python-version: ${{ matrix.python-version }}
-#
-#    # dependencies
-#    - name: Restore pip cache
-#      uses: actions/cache@v2
-#      with:
-#        path: ~/.cache/pip
-#        key: ${{ runner.os }}-pip-${{ hashFiles('setup.cfg') }}
-#
-#    - name: Install lint dependencies
-#      run: python -m pip --cache-dir ~/.cache/pip install --quiet mypy
-#    
-#    # lint
-#    - name: run MyPy
-#      run: python -m mypy --config-file setupg.cfg .
