--- a/.github/workflows/Tests.yaml
+++ b/.github/workflows/Tests.yaml
@@ -10,7 +10,7 @@ jobs:
   Test:
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10.0-alpha.4"]
+        python-version: ["3.7", "3.8", "3.9", "3.10.0-alpha.4", "pypy-3.7"]
         os: [ubuntu-latest, windows-latest]
 
     runs-on: ${{ matrix.os }}
