add caching submodule with abstract base classes
This commit adds the abstract base classes for implementing issue #23.

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,6 +44,7 @@ ignore_missing_imports = True
 no_implicit_reexport = True
 check_untyped_defs = True
 disallow_untyped_defs = True
+no_implicit_optional = True
 
 [mypy-pyhp.libpyhp]
 ignore_errors = True
