change cache timestamps to integers and lift typing restriction
To allow for more precise timestamps, all timestamps in the caching subsystem are expected to be integers in ns.
Furthermore, the abc now use Any generics to allow proper subclassing.

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,7 +39,7 @@ warn_redundant_casts = True
 warn_unused_configs = True
 warn_unused_ignores = True
 disallow_subclassing_any = True
-disallow_any_generics = True
+disallow_any_generics = False
 ignore_missing_imports = True
 no_implicit_reexport = True
 check_untyped_defs = True
