--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,7 @@ url = https://github.com/Deric-W/PyHP
 classifiers =
     Programming Language :: Python :: 3
 	Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Intended Audience :: Developers
@@ -25,8 +26,15 @@ classifiers =
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
 
 [options]
-packages = pyhp, pyhp.compiler
+packages = pyhp, pyhp.compiler, pyhp.caching
 python_requires = >=3.7
+
+[options.extras_require]
+CONFIG = toml >= 0.10.0
+
+[options.entry_points]
+console_scripts =
+    pyhp = pyhp.main:cli_main [CONFIG]
 
 [coverage:run]
 source = pyhp
