--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,7 @@ classifiers =
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
 
 [options]
-packages = pyhp, pyhp.compiler, pyhp.caching
+packages = pyhp, pyhp.compiler, pyhp.backends, pyhp.backends.caches, pyhp.backends.caches.timestamped
 python_requires = >=3.7
 
 [options.extras_require]
