--- a/setup.cfg
+++ b/setup.cfg
@@ -26,11 +26,19 @@ classifiers =
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
 
 [options]
-packages = pyhp, pyhp.compiler, pyhp.backends, pyhp.backends.caches, pyhp.backends.caches.timestamped
+packages =
+    pyhp
+    pyhp.compiler
+    pyhp.backends
+    pyhp.backends.caches
+    pyhp.backends.caches.timestamped
+    pyhp.wsgi
+    pyhp.wsgi.interfaces
 python_requires = >=3.7
 
 [options.extras_require]
 CONFIG = toml >= 0.10.0
+PHP = werkzeug >= 2.0.0
 
 [options.entry_points]
 console_scripts =
