--- a/.github/workflows/Tests.yaml
+++ b/.github/workflows/Tests.yaml
@@ -40,7 +40,7 @@ jobs:
       run: python setup.py bdist_wheel
 
     - name: Install wheel
-      run: python -m pip install "dist/pyhp_core-$(python setup.py --version)-py3-none-any.whl[CONFIG]"
+      run: python -m pip install "dist/pyhp_core-$(python setup.py --version)-py3-none-any.whl[CONFIG,PHP]"
       shell: bash
 
     - name: run tests
