enable new WSGI-based runtime
Side-effect: header_register_callback is no longer allowed
             to send output or call sys.exit().

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,7 +42,9 @@ PHP = werkzeug >= 2.0.0
 
 [options.entry_points]
 console_scripts =
-    pyhp = pyhp.main:cli_main [CONFIG]
+    pyhp = pyhp.main:cli_main [CONFIG,PHP]
+    pyhp-cli = pyhp.main:cli_main [CONFIG,PHP]
+    pyhp-cgi = pyhp.main:cgi_main [CONFIG,PHP]
 
 [coverage:run]
 source = pyhp
