--- a/.github/workflows/Tests.yaml
+++ b/.github/workflows/Tests.yaml
@@ -1,10 +1,6 @@
 name: Tests
 
-on:
-  push:
-  pull_request:
-    types: [opened, synchronize, reopened]
-  workflow_dispatch:
+on: [push, pull_request, workflow_dispatch]
 
 jobs:
   Test:
