--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,9 @@ python_requires = >=3.7
 CONFIG = toml >= 0.10.0
 PHP = werkzeug >= 2.0.0
 
+[options.package_data]
+pyhp = py.typed
+
 [options.entry_points]
 console_scripts =
     pyhp = pyhp.main:cli_main [CONFIG,PHP]
